# multimodal-data-quality-pipeline

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements-clip.txt  requirements.txt
.github/workflows/: tests.yml
configs/: pipeline.yaml  quality_rules.yaml  quality_rules_coco_clip_v1.1.yaml  quality_rules_v1.1_strict.yaml
data/exports/: train.jsonl  (+2 more)
docs/: data_card.md  distributed_quality_aggregation.md  interview_playbook.md  project_showcase.md  review_feedback_loop.md  scaling_design.md  split_leakage_check.md
examples/: README.md  evaluation_errors.csv  review_decisions_demo.jsonl
scripts/: analyze_caption_tags.py  compare_versions.py  create_demo_data.py  create_demo_video.py  dataset_doctor.py  download_coco_val2017.ps1  generate_project_showcase.py  generate_quality_report.py  generate_sample_gallery.py  prepare_coco_subset.py  process_video_demo.py  run_dashboard.ps1  run_local_pipeline.ps1
src/: __init__.py  cli.py
tests/: test_cli.py  test_clip_scorer.py  test_creative_sft_export.py  test_dashboard_metrics.py  test_dataset_doctor.py  test_dataset_version.py  test_duckdb_quality_agg.py  test_duplicate_detector.py  test_evaluation_feedback.py  test_export_dataset.py  test_image_quality.py  test_keyword_tags.py  test_pipeline.py  test_prepare_coco_subset.py  test_project_showcase.py  test_quality_report.py  test_quality_rules.py  test_quality_scorer.py  test_review_feedback.py  test_run_dashboard_script.py  test_run_manager.py  test_sample_gallery.py  test_split_leakage.py  test_text_quality.py  test_video_processing.py
(+45 files in other folders)
